--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "apollo-link-error": "^1.1.10",
     "apollo-link-http": "^1.5.14",
     "graphql": "^14.3.0",
+    "jwt-decode": "^2.2.0",
     "react": "^16.8.6",
     "react-apollo": "^2.5.5",
     "react-dom": "^16.8.6",
