--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "apollo-link-context": "^1.0.17",
     "apollo-link-error": "^1.1.10",
     "apollo-link-http": "^1.5.14",
+    "formik": "^1.5.7",
     "graphql": "^14.3.0",
     "jwt-decode": "^2.2.0",
     "react": "^16.8.6",
