--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "apollo-link-error": "^1.1.10",
     "apollo-link-http": "^1.5.14",
     "apollo-link-ws": "^1.0.17",
+    "downshift": "^3.2.10",
     "formik": "^1.5.7",
     "graphql": "^14.3.0",
     "jwt-decode": "^2.2.0",
