--- a/package.json
+++ b/package.json
@@ -3,17 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-hooks": "^0.1.0-beta.5",
     "apollo-boost": "^0.3.1",
-    "apollo-cache-inmemory": "^1.5.1",
-    "apollo-client": "^2.5.1",
+    "apollo-cache-inmemory": "^1.6.0",
+    "apollo-client": "^2.6.0",
     "apollo-link": "^1.2.11",
     "apollo-link-context": "^1.0.17",
     "apollo-link-error": "^1.1.10",
     "apollo-link-http": "^1.5.14",
     "apollo-link-ws": "^1.0.17",
+    "apollo-upload-client": "^10.0.1",
     "downshift": "^3.2.10",
     "formik": "^1.5.7",
     "graphql": "^14.3.0",
+    "graphql-tag": "^2.10.1",
     "jwt-decode": "^2.2.0",
     "react": "^16.8.6",
     "react-apollo": "^2.5.5",
